Continued development of the signup form and servlet. Updated CSS to be more responsive. Added commented out fields for the API key since it has limited uses and each developer should use their own key.

--- a/ESDProject/web/css/xyz.css
+++ b/ESDProject/web/css/xyz.css
@@ -17,3 +17,12 @@
 .overflow-scroll{
     overflow: scroll;
 }
+
+.xyz-form-width, .xyz-form-width .form-group, .xyz-form-width .row{
+    max-width: 300px;
+    width: 300px;
+}
+
+.input-group-addon i{
+    margin: 0 auto;
+}
