Changed the signup page to show alert messages. Changed CSS to ensure the alerts take up the full width on the custom form widths.

--- a/ESDProject/web/css/xyz.css
+++ b/ESDProject/web/css/xyz.css
@@ -18,7 +18,7 @@
     overflow: scroll;
 }
 
-.xyz-form-width, .xyz-form-width .form-group, .xyz-form-width .row{
+.xyz-form-width, .xyz-form-width .form-group, .xyz-form-width .row, .xyz-form-width div.alert{
     max-width: 300px;
     width: 300px;
 }
